--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "body-parser": "^1.10.0",
     "express": "^4.10.6",
     "mongoose": "^3.8.20"
+  },
+  "devDependencies": {
+    "mocha": "^2.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cjbellotti/restygoose"
   }
 }
