--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "mongoose": "^3.8.20"
   },
   "devDependencies": {
-    "mocha": "^2.0.1"
+    "async": "^0.9.0",
+    "chai": "^1.10.0",
+    "mocha": "^2.0.1",
+    "supertest": "^0.15.0"
   },
   "repository": {
     "type": "git",
