--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "async": "^0.9.0",
     "chai": "^1.10.0",
     "mocha": "^2.0.1",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "supertest-as-promised": "^1.0.0"
   },
   "repository": {
     "type": "git",
