--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.10.0",
     "express": "^4.10.6",
-    "mongoose": "^3.8.20"
+    "mongoose": "^3.8.20",
+    "querystring": "^0.2.0",
+    "url": "^0.10.2"
   },
   "devDependencies": {
     "async": "^0.9.0",
